<resources>
    <string name="app_name">HotelManagement</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="create_account">------CREATE NEW ACCOUNT------</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="next">Next</string>
    <string name="enter_name">What is your name?</string>
    <string name="enter_date_of_birth">What is your Date of birth?</string>
    <string name="home_address">What is your address?</string>
    <string name="no">No</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="male">Male</string>
    <string name="female">Female</string>?
    <string name="gender">What is your gender?</string>
    <string name="phone">What are your Phone numbers?</string>
    <string name="phone1">Phone No1</string>
    <string name="phone2">Phone No2</string>
    <string name="email_address">Enter your email address</string>
    <string name="choose_password">Choose password </string>
    <string name="confirm_password">Confirm Password</string>
    <string name="service">Service</string>
    <string name="cancel">Cancel</string>
    <string name="message">Message</string>
    <string name="logout">Logout</string>
    <string name="check_in">Check-in</string>
    <string name="check_out">Check-out</string>
    <string name="room_count">No of rooms</string>
    <string name="clean">Clean</string>
    <string name="disturb">Disturb</string>
    <string name="buffey">Buffey</string>
    <string name="emergency">Emergency</string>
    <string name="room_no">Room no</string>
    <string name="guest">Guest</string>
    <string name="search">Search</string>
    <string name="staff">Staff</string>
    <string name="room">Room</string>
    <string name="greeting">Welcome to Teq Hotel</string>
    <string name="close">Close</string>
    <string name="view_detail">View Details</string>
    <string name="update_detail">Update Detail</string>
    <string name="remove">Remove</string>
    <string name="add_staff">Add Staff</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="date_of_birth">Date of Birth</string>
    <string name="available_rooms">Available Rooms</string>
    <string name="all_rooms">All Rooms</string>
    <string name="set_rate">Set Room Rate</string>
    <string name="gender1">Gender</string>
    <string name="salary">Salary</string>
    <string name="working_hours">Working Hours</string>
    <string name="no_of_rooms">No of Rooms</string>
    <string name="type">Room Type</string>
    <string name="price">Price</string>
    <string name="service_name">Service name</string>
    <string name="service_no">Service no</string>
    <string name="request">Request</string>
    <string name="Roomtype">Room Type</string>
    <string name="teqhotel">TeqHotel</string>
    <string name="adultsno">No of Adults</string>
    <string name="childrenno">No of Children</string>
    <string name="reserve">Reserve</string>
    <string name="status">Status</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="repassword">Re-enter Password</string>
    <string name="enter_details">Enter staff details</string>
    <string name="guest_details">Guest Details</string>
    <string name="staff_details">Staff Detail</string>
    <string name="staff_email">Enter staff email address</string>
    <string name="enter_no">Enter no of adults and children</string>
    <string name="enter_roomno">Enter room no</string>
    <string name="update">Update</string>
    <string name="update_staff_detail">Update staff detail</string>
    <string name="book">Book now</string>
    <string name="adults">No of adults</string>
    <string name="children">No of children</string>
    <string name="description">Description</string>
    <string name="roomtype_price">Select room type and enter price</string>
    <string name="admin_allroom">All rooms detail in hotel</string>
    <string name="admin_available">Available rooms in hotel today</string>
</resources>
