<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.hotelmanagement.SignUpPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/teqhotel"
            android:id="@+id/textViewTeq"
            android:textColor="#ffffff"
            android:gravity = "center"
            android:textSize="20dp"
            android:background="@color/colorPrimary"/>

        <TextView
            android:layout_margin="15dp"
            android:textSize="24sp"
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/choose_password"/>

        <EditText
            android:layout_margin="15dp"
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@null"
            android:textColor="#000000"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <TextView
            android:layout_margin="15dp"
            android:textSize="18sp"
            android:id="@+id/textViewRePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textAlignment="center"
            android:text="@string/repassword"/>


        <EditText
            android:layout_margin="15dp"
            android:id="@+id/editTextRePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@null"
            android:textColor="#000000"
            android:inputType="textPassword"
            android:hint="@string/confirm_password" />



        <Button
            android:layout_margin="15dp"
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:text="@string/signup" />

    </LinearLayout>


</RelativeLayout>
