<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/ac1"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#1e90ff">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="5dp"
            android:background="#FFFFFF">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewServiceNo"
                android:text="@string/service_no"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/service_name"
                android:id="@+id/textViewService_name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:id="@+id/textViewPrice"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request"
                android:layout_gravity="right"
                android:id="@+id/button1"/>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>