<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.hotelmanagement.Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/teqhotel"
            android:id="@+id/textViewTeq"
            android:textColor="#ffffff"
            android:gravity = "center_vertical|left|start"
            android:textSize="20dp"
            android:background="@color/colorPrimaryDark"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/hotel"
            app:layout_constraintDimensionRatio="16:9"/>



        <EditText
            android:layout_margin="10dp"
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@null"
            android:textColor="#000000"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_margin="10dp"
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@null"
            android:textColor="#000000"
            android:hint="@string/password"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_margin="10dp"
            android:id="@+id/textViewForgotpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/create_account" />


        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="#FFFFFF"
            android:background="@color/colorholoGreenDark"
            android:text="@string/signup" />

    </LinearLayout>

    </RelativeLayout>
</ScrollView>
